# binplugin

./: readme.md
plugin/: CMakeLists.txt
plugin/src/: foober.cpp  foober.hpp
project/Assets/: Fuubar.cs
python-3.5.1/: demo.py  readme.md  setup.py  spammodule.c  spampp.cpp  spampp.h
python-3.5.1/src/main/: run_arraything.cpp  run_arraything.hpp  spammodule.c  spampp.cpp  spampp.h
python-3.5.1/src/test/: demo.py
unity5/: .gitignore  readme.md
unity5/cmake_project/: CMakeLists.txt
unity5/cmake_project/cmade/: pal_opencv.cmake
unity5/cmake_project/src/: unity_plugin_with_opencv.cpp  unity_plugin_with_opencv.hpp
unity5/plugin/: CMakeLists.txt
unity5/plugin/src/: foober.cpp
unity5/project/Assets/: TurnItUpsideDown.cs  scene.unity
unity5/project/ProjectSettings/: ProjectSettings.asset
unity5/unity_plugin_with_opencv/: CMakeLists.txt
unity5/unity_plugin_with_opencv/cmade/: pal_opencv.cmake
unity5/unity_plugin_with_opencv/src/: unity_plugin_with_opencv.cpp
unity5/unity_project/Assets/: TurnItUpsideDown.cs
unity5/unity_project/Assets/Example/: TestOpenCV.unity  TurnItUpsideDown.cs
unity5/unity_project/Assets/Materials/: Frown.mat
unity5/unity_project/Assets/Plugins/: OpenCV.cs
unity5/unity_project/ProjectSettings/: ProjectSettings.asset
unity_plugin_with_opencv/cmade/: pal_opencv.cmake
unity_plugin_with_opencv/src/: unity_plugin_with_opencv.cpp  unity_plugin_with_opencv.hpp
